@@ -19,6 +19,8 @@ version 1.3.0
 - switch to St Louis Fed database as gretl "sample" database
   (the BCIH database is getting too out-of-date)
 - add the Anscombe Quartet to the gretl data files
+- on Windows, make EMF graphs respect the user's choice of
+  plotting colors (required gnuplot patch)
 - various minor gui fixes and enhancements
 - update Windows version to gtk 2.4.9
 
